--- a/public/style.css
+++ b/public/style.css
@@ -5,13 +5,12 @@ body {
     padding: 0;
     background-color: #f9f9f9;
     color: #333;
-    overflow: visible;
-    /* S'assurer que tout le contenu est visible */
+    overflow-x: hidden; /* Empêcher le débordement horizontal */
 }
 
 /* Header */
 header {
-    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('images/TacosGeant.png') center/cover;
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('images/lusters3.avif') center/cover;
     color: white;
     text-align: center;
     height: 300px;
@@ -36,7 +35,7 @@ header .contact-info {
 header .contact-info a {
     color: white;
     text-decoration: none;
-    margin-right: 15px;
+    margin-right: 17px;
 }
 
 header .contact-info a:hover {
@@ -46,10 +45,8 @@ header .contact-info a:hover {
 /* Style du statut d'ouverture */
 #status-display {
     position: fixed;
-    top: 0px;
-    /* En haut de la page */
+    top: 10px;
     right: 20px;
-    /* Décalage depuis la droite */
     background-color: rgba(255, 255, 255, 0.8);
     color: #ff5722;
     font-size: 1.2rem;
@@ -76,7 +73,6 @@ header .contact-info a:hover {
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     z-index: 999;
-    /* Moins élevé que l'horaire */
 }
 
 /* Slider */
@@ -99,19 +95,18 @@ header .contact-info a:hover {
 }
 
 .slide img {
-    width: 70%;
-    max-width: 350px;
-    margin: auto;
-    display: block;
+    width: 100%;
+    max-width: 800px;
+    height: auto;
     border-radius: 8px;
     cursor: pointer;
-    filter: drop-shadow(0 50px 20px #0009);
+    filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.2));
 }
 
 .slide h3 {
     margin-top: 10px;
     color: #ff5722;
-    font-size: 1rem;
+    font-size: 1.2rem;
 }
 
 /* Main content */
@@ -127,12 +122,13 @@ main {
 h2 {
     margin-bottom: 20px;
     color: #ff5722;
+    text-align: center;
 }
 
 form {
     display: flex;
     flex-direction: column;
-    filter: drop-shadow(0 5px 10px #0009);
+    filter: drop-shadow(0 5px 10px rgba(0, 0, 0, 0.1));
 }
 
 label {
@@ -147,6 +143,8 @@ textarea {
     border: 1px solid #ddd;
     border-radius: 5px;
     font-size: 1rem;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 button {
@@ -157,6 +155,7 @@ button {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
 button:hover {
@@ -169,14 +168,16 @@ button:hover {
     gap: 20px;
     flex-wrap: wrap;
     justify-content: center;
+    margin-bottom: 20px;
 }
 
 #tacos-categories img {
-    width: 80px;
-    height: 80px;
+    width: 100px;
+    height: 100px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     cursor: pointer;
+    object-fit: cover; /* Assurer que les images conservent leurs proportions */
 }
 
 /* Boissons categories */
@@ -189,11 +190,12 @@ button:hover {
 }
 
 #boissons-list img {
-    width: 80px;
-    height: 80px;
+    width: 100px;
+    height: 100px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     cursor: pointer;
+    object-fit: cover; /* Assurer que les images conservent leurs proportions */
 }
 
 #boissons-list div {
@@ -218,6 +220,7 @@ button:hover {
     font-size: 1.2rem;
     margin-top: 20px;
     color: #ff5722;
+    text-align: center;
 }
 
 /* Footer */
@@ -258,7 +261,6 @@ footer p:last-child {
 /* Modale */
 .modal {
     display: none;
-    /* Cacher par défaut */
     position: fixed;
     z-index: 1000;
     top: 0;
@@ -266,7 +268,6 @@ footer p:last-child {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.7);
-    /* Fond semi-transparent */
     justify-content: center;
     align-items: center;
 }
@@ -283,7 +284,7 @@ footer p:last-child {
 
 .modal-content img {
     width: 100%;
-    max-height: 200px;
+    max-height: 646px;
     object-fit: cover;
     border-radius: 5px;
     margin: 20px 0;
@@ -296,145 +297,6 @@ footer p:last-child {
     font-size: 1.5rem;
     cursor: pointer;
     color: #333;
-}
-
-/* Orders List */
-#orders-list {
-    margin: 20px 0;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    background-color: #fff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.order {
-    border: 1px solid #ccc;
-    padding: 15px;
-    margin-bottom: 10px;
-    border-radius: 8px;
-    background-color: #f9f9f9;
-}
-
-.order p {
-    margin: 5px 0;
-}
-
-/* Filters */
-.filters {
-    display: flex;
-    gap: 20px;
-    margin: 20px 0;
-    align-items: center;
-    justify-content: center;
-}
-
-.filters label {
-    font-weight: bold;
-}
-
-.filters input,
-.filters select {
-    padding: 8px;
-    font-size: 1rem;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-}
-
-/* Responsivité */
-@media (max-width: 768px) {
-    .slider img {
-        width: 90%;
-    }
-
-    #tacos-categories img,
-    #boissons-list img {
-        width: 60px;
-        height: 60px;
-    }
-
-    header {
-        height: 250px;
-    }
-
-    main {
-        margin: 10px;
-        padding: 15px;
-    }
-
-    footer {
-        font-size: 12px;
-    }
-
-    .filters {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
-    #total-display-header {
-        font-size: 12px;
-        top: 37px;
-        right: 10px;
-    }
-}
-
-/* Total à payer en haut à droite */
-#total-display-header {
-    position: fixed;
-    top: 38px;
-    /* Décalage depuis le haut de la page */
-    right: 20px;
-    /* Décalage depuis la droite */
-    background-color: rgba(255, 255, 255, 0.8);
-    /* Fond légèrement transparent */
-    color: #ff5722;
-    /* Couleur contrastée */
-    font-size: 1.2rem;
-    font-weight: bold;
-    padding: 10px 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    z-index: 1000;
-    /* Assurer que le total soit toujours visible au-dessus des autres éléments */
-}
-
-/* Style de l'élément de statut */
-#status-display {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
-#status-icon {
-    font-size: 1.5rem;
-}
-
-#status-text {
-    font-size: 1rem;
-    font-weight: bold;
-}
-
-
-
-
-.address-input {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
-#get-location-btn {
-    padding: 10px;
-    background-color: #ff5722;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 14px;
-}
-
-#get-location-btn:hover {
-    background-color: #e64a19;
 }
 
 /* Styles pour les icônes de pagination */
@@ -459,4 +321,85 @@ footer p:last-child {
 
 .pagination .pagination-dot.active {
     background-color: #ff5722;
+}
+
+/* Responsivité */
+@media (max-width: 768px) {
+    header h1 {
+        font-size: 1.5rem;
+    }
+
+    header .contact-info {
+        font-size: 0.8rem;
+    }
+
+    .slide img {
+        max-width: 90%;
+    }
+
+    #tacos-categories img,
+    #boissons-list img {
+        width: 80px;
+        height: 80px;
+    }
+
+    #total-display-header {
+        font-size: 1rem;
+        top: 40px;
+        right: 10px;
+        padding: 8px 15px;
+    }
+
+    #status-display {
+        font-size: 1rem;
+        padding: 5px 15px;
+    }
+
+    main {
+        margin: 10px;
+        padding: 15px;
+    }
+
+    footer {
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 480px) {
+    header {
+        height: 200px;
+    }
+
+    header h1 {
+        font-size: 1.2rem;
+    }
+
+    header .contact-info {
+        font-size: 0.7rem;
+    }
+
+    #tacos-categories img,
+    #boissons-list img {
+        width: 60px;
+        height: 60px;
+    }
+
+    
+        
+    #total-display-header {
+        font-size: 0.9rem;
+        top: 35px;
+        right: 49px;
+        padding: 3px 4px;
+    }
+    
+
+    #status-display {
+        font-size: 0.9rem;
+        padding: 3px 10px;
+    }
+
+    .modal-content img {
+        max-height: 434px;
+    }
 }
