--- a/public/style.css
+++ b/public/style.css
@@ -84,6 +84,8 @@ header .contact-info a:hover {
     border-radius: 8px;
 }
 
+
+
 .slides {
     display: flex;
     transition: transform 0.5s ease-in-out;
@@ -173,7 +175,7 @@ button:hover {
 
 #tacos-categories img {
     width: 100px;
-    height: 100px;
+    height: 117px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     cursor: pointer;
@@ -191,7 +193,7 @@ button:hover {
 
 #boissons-list img {
     width: 100px;
-    height: 100px;
+    height: 124px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     cursor: pointer;
@@ -323,6 +325,34 @@ footer p:last-child {
     background-color: #ff5722;
 }
 
+
+/* Styles pour aligner les boutons radio du statut en ligne */
+.order .status-container {
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+    margin: 10px 0;
+}
+
+.order .status-container label {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    font-size: 14px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* Responsivité */
 @media (max-width: 768px) {
     header h1 {
@@ -363,6 +393,14 @@ footer p:last-child {
     footer {
         font-size: 12px;
     }
+
+ 
+
+
+
+
+
+
 }
 
 @media (max-width: 480px) {
@@ -380,8 +418,9 @@ footer p:last-child {
 
     #tacos-categories img,
     #boissons-list img {
-        width: 60px;
-        height: 60px;
+        width: 83px;
+        height: 92px;
+    
     }
 
     
@@ -402,4 +441,460 @@ footer p:last-child {
     .modal-content img {
         max-height: 434px;
     }
+   
+
+
+
+}
+
+
+
+
+
+
+/* Styles pour la section Paiement à la Livraison */
+#payment-section {
+    padding: 2rem;
+    background-color: white;
+    margin: 20px 0;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.payment-info {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.payment-icon {
+    font-size: 2.5rem;
+    color: #ff5722;
+}
+
+.payment-text {
+    flex: 1;
+}
+
+.payment-text p {
+    margin: 0.5rem 0;
+    color: #333;
+}
+
+.payment-text strong {
+    color: #ff5722;
+}
+
+
+
+/* Styles pour l'option de paiement dans le formulaire */
+.payment-option {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-top: 10px;
+    color: #28a745;
+    font-size: 1rem;
+}
+
+.payment-option i {
+    font-size: 1.2rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+ /* Styles globaux */
+ body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f9f9f9;
+    color: #333;
+}
+
+header {
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('images/lusters3.avif') center/cover;
+    color: white;
+    text-align: center;
+    padding: 100px 20px;
+}
+
+header h1 {
+    font-size: 3rem;
+    margin: 0;
+}
+
+.contact-info {
+    margin-top: 20px;
+    font-size: 1.2rem;
+}
+
+.contact-info a {
+    color: white;
+    text-decoration: none;
+    margin: 0 15px;
+}
+
+.contact-info a:hover {
+    text-decoration: underline;
+}
+
+/* Styles pour la modal */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    max-width: 500px;
+    width: 90%;
+    text-align: center;
+    position: relative;
+}
+
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 24px;
+    font-weight: bold;
+    cursor: pointer;
+    color: #333;
+}
+
+.close-btn:hover {
+    color: #ff5722;
+}
+
+/* Styles pour le slider */
+.slider {
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    max-width: 800px;
+    margin: 20px auto;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.slides {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+}
+
+.slide {
+    min-width: 100%;
+    box-sizing: border-box;
+    text-align: center;
+}
+
+.slide img {
+    width: 100%;
+    max-height: 995px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.slide h3 {
+    margin-top: 10px;
+    font-size: 1.5rem;
+    color: #473fb0;
+}
+
+/* Styles pour les sections de produits */
+section {
+    padding: 2rem;
+    background-color: white;
+    margin: 20px 0;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+section h2 {
+    text-align: center;
+    color: #ff5722;
+    margin-bottom: 20px;
+    font-size: 2rem;
+}
+
+.product-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    padding: 20px;
+}
+
+.product-card {
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    text-align: center;
+    transition: transform 0.3s ease;
+}
+
+.product-card:hover {
+    transform: translateY(-10px);
+}
+
+.product-card img {
+    width: 100%;
+    height: 536px;
+    object-fit: cover;
+}
+
+.product-card h3 {
+    margin: 15px 0 10px;
+    font-size: 1.5rem;
+    color: #d4d3e3;
+}
+
+.product-card p {
+    padding: 0 15px;
+    color: #666;
+    font-size: 1rem;
+}
+
+.product-card strong {
+    display: block;
+    margin: 10px 0;
+    color: #ff5722;
+    font-size: 1.2rem;
+}
+
+/* Styles pour le formulaire de commande */
+main {
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 20px;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+label {
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+input,
+textarea {
+    margin-bottom: 20px;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    font-size: 1rem;
+}
+
+button {
+   
+    background-color: #1e1e1e;
+    color: #28a745;
+    padding: 10px;
+    font-size: 1rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #e64a19;
+}
+
+#total-display {
+    font-weight: bold;
+    font-size: 1.2rem;
+    margin-top: 20px;
+    color: #ff5722;
+}
+
+/* Styles pour la flèche de retour en haut */
+#back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #ff5722;
+    color: white;
+    padding: 10px;
+    border-radius: 50%;
+    font-size: 20px;
+    cursor: pointer;
+    display: none;
+    z-index: 1000;
+}
+
+#back-to-top:hover {
+    background-color: #e64a19;
+}
+
+/* Styles pour la galerie */
+#gallery-section {
+    padding: 2rem;
+    background-color: white;
+    margin: 20px 0;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.gallery-container {
+    display: flex;
+    gap: 20px;
+    align-items: flex-start;
+}
+
+.thumbnail-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
+    gap: 10px;
+    width: 30%;
+}
+
+.thumbnail {
+   
+    width: 95%;
+    height: 87px;
+    object-fit: cover;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+.thumbnail:hover {
+    transform: scale(1.1);
+}
+
+.large-image-container {
+    width: 70%;
+    text-align: center;
+}
+
+#large-image {
+   
+    width: 100%;
+    max-height: 1122px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    .product-grid {
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
+
+    .product-card img {
+        height: 362px;
+    }
+
+    section h2 {
+        font-size: 1.8rem;
+    }
+
+    header h1 {
+        font-size: 2rem;
+    }
+
+    .contact-info {
+        font-size: 1rem;
+    }
+
+    .gallery-container {
+        flex-direction: column;
+    }
+
+    .thumbnail-grid {
+        width: 100%;
+    }
+
+    .large-image-container {
+        width: 100%;
+    }
+}
+
+
+
+
+/* Mode Nocturne */
+body.dark-mode {
+    background-color: #121212;
+    color: #ffffff;
+}
+
+body.dark-mode header {
+    background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('images/lusters3.avif') center/cover;
+}
+
+body.dark-mode main,
+body.dark-mode section,
+body.dark-mode .modal-content {
+    background-color: #1e1e1e;
+    color: #ffffff;
+}
+
+body.dark-mode footer {
+    background-color: #333;
+    color: #ffffff;
+}
+
+body.dark-mode .product-card {
+    background-color: #2c2c2c;
+    color: #2c2727;
+}
+
+body.dark-mode .product-card p {
+    color: #f3eded;
+}
+
+body.dark-mode .payment-option {
+    color: #28a745;
+}
+
+body.dark-mode .payment-text p {
+    color: #4681aa;
+}
+
+body.dark-mode .payment-text strong {
+    color: #ff5722;
+}
+
+body.dark-mode #total-display,
+body.dark-mode #total-display-header {
+    color: #ff5722;
+}
+
+body.dark-mode .modal-content {
+    background-color: #2c2c2c;
+    color: #ffffff;
+}
+
+body.dark-mode .close-btn {
+    color: #ffffff;
+}
+
+body.dark-mode .close-btn:hover {
+    color: #ff5722;
 }
